--- a/balance-transfer/artifacts/base.yaml
+++ b/balance-transfer/artifacts/base.yaml
@@ -24,6 +24,9 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/crypto/peer/tls/server.key
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/crypto/peer/tls/server.crt
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/crypto/peer/tls/ca.crt
+      - CORE_OPERATIONS_TLS_ENABLED=false
+      - CORE_OPERATIONS_LISTENADDRESS=:9443
+      - CORE_METRICS_PROVIDER=prometheus
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     volumes:
