--- a/balance-transfer/artifacts/channel/cryptogen.yaml
+++ b/balance-transfer/artifacts/channel/cryptogen.yaml
@@ -18,6 +18,8 @@ OrdererOrgs:
     # ---------------------------------------------------------------------------
     Specs:
       - Hostname: orderer
+      - Hostname: orderer2
+      - Hostname: orderer3
 
 # ---------------------------------------------------------------------------
 # "PeerOrgs" - Definition of organizations managing peer nodes
