--- a/balance-transfer/artifacts/channel/configtx.yaml
+++ b/balance-transfer/artifacts/channel/configtx.yaml
@@ -114,16 +114,16 @@ Orderer: &OrdererDefaults
         Consenters:
         - Host: orderer.example.com
           Port: 7050
-          ClientTLSCert: /channel/crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-          ServerTLSCert: /channel/crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ClientTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ServerTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
         - Host: orderer2.example.com
           Port: 7050
-          ClientTLSCert: /channel/crypto-config/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
-          ServerTLSCert: /channel/crypto-config/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
+          ClientTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
+          ServerTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
         - Host: orderer3.example.com
           Port: 7050
-          ClientTLSCert: /channel/crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
-          ServerTLSCert: /channel/crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
+          ClientTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
+          ServerTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
     # Organizations is the list of orgs which are defined as participants on
     # the orderer side of the network
     Kafka:
