--- a/balance-transfer/prometheus/prometheus.yml
+++ b/balance-transfer/prometheus/prometheus.yml
@@ -14,4 +14,4 @@ scrape_configs:
   - job_name: 'prometheus'
 
     static_configs:
-       - targets: ['orderer.example.com:8443', 'peer0.org1.example.com:9443', 'peer1.org1.example.com:9443', 'peer0.org2.example.com:9443', 'peer1.org2.example.com:9443']
+       - targets: ['orderer.example.com:8443', 'orderer2.example.com:8443', 'orderer3.example.com:8443', 'peer0.org1.example.com:9443', 'peer1.org1.example.com:9443', 'peer0.org2.example.com:9443', 'peer1.org2.example.com:9443']
