byfn: support MinBFT on Fabric
Signed-off-by: Naoya Horiguchi <n-horiguchi@ah.jp.nec.com>

--- a/first-network/configtx.yaml
+++ b/first-network/configtx.yaml
@@ -348,6 +348,31 @@ Profiles:
                 - *Org1
                 - *Org2
 
+    SampleSingleNodeMinbft:
+        <<: *ChannelDefaults
+        Capabilities:
+            <<: *ChannelCapabilities
+        Orderer:
+            <<: *OrdererDefaults
+            OrdererType: minbft
+            Addresses:
+                - orderer.example.com:7050
+                - orderer2.example.com:7050
+                - orderer3.example.com:7050
+            Organizations:
+                - *OrdererOrg
+            Capabilities:
+                <<: *OrdererCapabilities
+        Application:
+            <<: *ApplicationDefaults
+            Organizations:
+            - <<: *OrdererOrg
+        Consortiums:
+            SampleConsortium:
+                Organizations:
+                - *Org1
+                - *Org2
+
     SampleMultiNodeEtcdRaft:
         <<: *ChannelDefaults
         Capabilities:
